Regress an API call to support Java 8